--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 ﻿<!DOCTYPE html>
+<html lang="en">
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top Center Text</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            /* Horizontal centering */
+            align-items: flex-start;
+            /* Vertical centering to the top */
+            min-height: 100vh;
+            /* Ensure the body takes up the full viewport height */
+            margin: 0;
+            /* Remove default body margins */
+        }
+
+        p {
+            font-size: 24px;
+            /* Optional: Adjust font size for better visibility */
+        }
+    </style>
 </head>
+
 <body>
-    <p style="text-align:center; ">Hello World!!!</p>
+    <p>Hey, what's up bro? <a href="https://atliac.com/">atliac.com</a></p>
 </body>
+
 </html>
